--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 body {
-   background: #cccccc
+   background: #CCCCCC
 }
-
+#banner {
+  width: 100%
+}
 h1 {
     text-align: center
+}
 
 p {
    text-align: center;
