--- a/style.css
+++ b/style.css
@@ -1,20 +1,23 @@
 body {
-   background: #CCCCCC
+	background: #CCCCCC
 }
+
 #banner {
-  width: 100%
+	width: 100%;
 }
+
 h1 {
-    text-align: center
+	text-align: center
 }
 
 p {
-   text-align: center;
-}
-#missão {
-    font-size: 20px
-
-em strongh {
-    color: red;
+	text-align: center;
 }
 
+#missao {
+	font-size: 20px
+}
+
+em strong {
+	color: #FF0000;
+}
